--- a/app/src/main/res/layout/fragment_profile_details.xml
+++ b/app/src/main/res/layout/fragment_profile_details.xml
@@ -12,6 +12,19 @@
     <!-- Fixed layout -->
 
     <ImageView
+        android:id="@+id/editProfile"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:elevation="10dp"
+        android:src="@drawable/ic_edit_profile"
+        android:layout_margin="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
+
+
+
+    <ImageView
         android:id="@+id/backBtn"
         android:layout_width="35dp"
         android:layout_height="35dp"
