--- a/app/src/main/res/layout/fragment_profile_details.xml
+++ b/app/src/main/res/layout/fragment_profile_details.xml
@@ -50,6 +50,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white"
+        android:visibility="gone"
         />
 
     <TextView
