video selection done upload remains

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -126,7 +126,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
-            android:id="@+id/linearLayout3"
+            android:id="@+id/uploadData"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="3dp"
@@ -160,7 +160,7 @@
             android:textColorHint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
+            app:layout_constraintStart_toEndOf="@+id/uploadData"
             app:layout_constraintTop_toTopOf="parent"
             android:maxLines="5"
             android:textSize="14sp"
