edit layout done

--- a/app/src/main/res/layout/fragment_edit_my_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_my_profile.xml
@@ -218,12 +218,14 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/editDataLayout"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:maxHeight="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+ >
 
         <TextView
             android:id="@+id/headingText"
@@ -237,21 +239,50 @@
 
 
         <EditText
+            android:id="@+id/editDataDetails"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:background="@null"
             android:fontFamily="@font/poppins_medium"
             android:maxLines="5"
+            android:scrollbars="horizontal"
             android:textColor="@color/white"
+            tools:text="checking the name "
+            android:gravity="start"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/cancleBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/headingText" />
+            app:layout_constraintTop_toBottomOf="@+id/headingText"
+           />
 
         <TextView
+            android:id="@+id/cancleBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
+            android:padding="5dp"
+            android:text="Cancle"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/saveBtn"
+            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
+            app:layout_constraintTop_toTopOf="@+id/saveBtn" />
+
+        <TextView
+            android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
             android:textSize="18sp"
-            />
+            android:text="Done"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"/>
 
 
 
