--- a/app/src/main/res/layout/row_chat.xml
+++ b/app/src/main/res/layout/row_chat.xml
@@ -9,6 +9,7 @@
 
 
 
+<!--    Time layout -->
     <LinearLayout
         android:id="@+id/rc_main_date"
         android:layout_width="match_parent"
@@ -49,6 +50,9 @@
 
     </LinearLayout>
 
+
+<!--    Received  layout -->
+
     <LinearLayout
         android:id="@+id/llRecieveLayout"
         android:layout_width="match_parent"
@@ -57,11 +61,9 @@
 
         <ImageView
             android:id="@+id/rc_image"
-
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:layout_marginStart="@dimen/_5sdp"
-
             android:visibility="gone" />
 
         <LinearLayout
@@ -80,76 +82,42 @@
 
                 <TextView
                     android:id="@+id/repliedTextRecieve"
-                    android:visibility="gone"
+                    tools:text="this is thre replyed toast "
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="@dimen/_2sdp"
                     android:background="@drawable/reply_box"
-
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingEnd="@dimen/_10sdp"
                     android:paddingBottom="@dimen/_5sdp"
-                    android:shadowDx="1"
-                    android:shadowDy="1"
                     android:gravity="start"
-                    android:shadowRadius="1"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_9sdp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:visibility="gone"/>
 
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/recievedMessage"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:paddingStart="@dimen/_5sdp">
-
-
-                    <ImageView
-                        android:id="@+id/recieveImage"
-                        android:layout_width="@dimen/_120sdp"
-                        android:layout_height="@dimen/_120sdp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:visibility="gone"/>
-
-                    <VideoView
-                        android:id="@+id/recieveVideo"
-                        android:layout_width="@dimen/_120sdp"
-                        android:layout_height="@dimen/_120sdp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:visibility="gone"/>
-
-
-                    <TextView
-                        android:id="@+id/recievedMessage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="@dimen/_2sdp"
-                        android:background="@drawable/chat_recieve_layout"
-                        tools:text="Hello checking text "
-                        android:paddingStart="@dimen/_13sdp"
-                        android:paddingTop="@dimen/_7sdp"
-                        android:paddingEnd="@dimen/_15sdp"
-                        android:paddingBottom="@dimen/_7sdp"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:shadowRadius="1"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_11sdp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:background="@drawable/chat_recieve_layout"
+                    tools:text="Hello checking text "
+                    android:layout_marginStart="5dp"
+                    android:paddingStart="@dimen/_13sdp"
+                    android:paddingTop="@dimen/_7sdp"
+                    android:paddingEnd="@dimen/_15sdp"
+                    android:paddingBottom="@dimen/_7sdp"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="1"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_11sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -170,7 +138,7 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/iv_left_image"
+                        android:id="@+id/recieveImage"
                         android:layout_width="@dimen/_150sdp"
                         android:layout_height="@dimen/_150sdp"
                         android:layout_margin="@dimen/_4sdp"
@@ -182,16 +150,21 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <ImageView
-                        android:id="@+id/leftVideo"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
 
+                    <VideoView
+                        android:id="@+id/recieveVideo"
+                        android:layout_width="@dimen/_150sdp"
+                        android:layout_height="@dimen/_150sdp"
+                        android:layout_margin="@dimen/_4sdp"
+                        android:contentDescription="@null"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                       />
+
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -209,7 +182,7 @@
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="1"
-                android:text="10:40 AM"
+                tools:text="10:40 AM"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/_9sdp"
                 app:layout_constraintStart_toStartOf="@+id/recievedMessage"
@@ -219,6 +192,8 @@
 
     </LinearLayout>
 
+
+<!--    Sent Layout-->
     <LinearLayout
         android:id="@+id/llSentLayout"
         android:layout_width="match_parent"
@@ -249,7 +224,6 @@
                 android:gravity="end"
                 android:layout_gravity="end"
                 android:layout_marginEnd="@dimen/_15sdp"
-
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingTop="@dimen/_4sdp"
                 android:paddingEnd="@dimen/_10sdp"
@@ -270,25 +244,6 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:paddingEnd="@dimen/_8sdp">
-
-
-                <ImageView
-                    android:id="@+id/sentImage"
-                    android:layout_width="@dimen/_120sdp"
-                    android:layout_height="@dimen/_120sdp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:visibility="gone"/>
-
-                <VideoView
-                    android:id="@+id/sentVideo"
-                    android:layout_width="@dimen/_120sdp"
-                    android:layout_height="@dimen/_120sdp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:visibility="gone"/>
 
 
                 <TextView
@@ -322,8 +277,6 @@
                     android:visibility="gone"
                     android:paddingStart="@dimen/_4sdp"
                     android:scaleType="fitXY"
-
-
                     app:layout_constraintBottom_toBottomOf="@+id/sentMessage"
                     app:layout_constraintEnd_toEndOf="@+id/sentMessage"
                     app:layout_constraintStart_toStartOf="@+id/sentMessage"
@@ -337,8 +290,6 @@
                     android:paddingStart="@dimen/_4sdp"
                     android:scaleType="fitXY"
                     android:visibility="gone"
-
-
                     app:layout_constraintBottom_toBottomOf="@+id/sentMessage"
                     app:layout_constraintEnd_toEndOf="@+id/sentMessage"
                     app:layout_constraintStart_toStartOf="@+id/sentMessage" />
@@ -348,7 +299,6 @@
 
 
             <androidx.cardview.widget.CardView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/_5sdp"
@@ -364,7 +314,7 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/iv_right_image"
+                        android:id="@+id/sentImage"
                         android:layout_width="@dimen/_150sdp"
                         android:layout_height="@dimen/_150sdp"
                         android:layout_margin="@dimen/_3sdp"
@@ -376,16 +326,21 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <ImageView
-                        android:id="@+id/rightIcon"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
 
+
+                    <VideoView
+                        android:id="@+id/sentVideo"
+                        android:layout_width="@dimen/_150sdp"
+                        android:layout_height="@dimen/_150sdp"
+                        android:layout_margin="@dimen/_3sdp"
+                        android:contentDescription="@null"
+                        android:scaleType="fitXY"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:visibility="gone"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/iv_right_image" />
+                        app:layout_constraintTop_toTopOf="parent"/>
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -403,7 +358,7 @@
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="1"
-                android:text="12:32 PM"
+                tools:text="12:32 PM"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/_9sdp"
                 app:layout_constraintEnd_toEndOf="@+id/sentMessage"
