--- a/app/src/main/res/xml/fragment_profile_details_scene.xml
+++ b/app/src/main/res/xml/fragment_profile_details_scene.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:motion="http://schemas.android.com/apk/res-auto"
-   >
+    xmlns:motion="http://schemas.android.com/apk/res-auto">
 
 
     <ConstraintSet android:id="@+id/start">
@@ -9,33 +8,32 @@
             android:id="@+id/personImageSquare"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
             motion:transitionEasing="cubic(0,0.38,0.11,0)">
 
         </Constraint>
         <Constraint
             android:id="@+id/personImageCircle"
-            motion:layout_constraintStart_toEndOf="@+id/backBtn"
             android:layout_width="1dp"
             android:layout_height="1dp"
-            motion:layout_constraintBottom_toBottomOf="@+id/personImageSquare"
             android:layout_marginStart="20dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/personImageSquare"
+            motion:layout_constraintStart_toEndOf="@+id/backBtn"
             motion:layout_constraintTop_toTopOf="@+id/backBtn" />
 
     </ConstraintSet>
 
 
-
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@+id/personImageSquare"
-            motion:layout_constraintStart_toEndOf="@+id/backBtn"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginStart="8dp"
-            motion:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            motion:layout_constraintStart_toEndOf="@+id/backBtn"
+            motion:layout_constraintTop_toTopOf="parent">
 
 
         </Constraint>
@@ -43,49 +41,47 @@
             android:id="@+id/personName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            motion:layout_constraintTop_toTopOf="@id/personImageSquare"
+            android:layout_marginStart="10dp"
             motion:layout_constraintStart_toEndOf="@id/personImageSquare"
-            android:layout_marginStart="10dp" />
+            motion:layout_constraintTop_toTopOf="@id/personImageSquare" />
         <Constraint
             android:id="@+id/onlineStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            motion:layout_constraintTop_toBottomOf="@+id/personName"
-            motion:layout_constraintStart_toStartOf="@+id/personName" />
+            motion:layout_constraintStart_toStartOf="@+id/personName"
+            motion:layout_constraintTop_toBottomOf="@+id/personName" />
         <Constraint
             android:id="@+id/linearLayout4"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            motion:layout_constraintTop_toBottomOf="@id/personImageSquare"
+            android:layout_marginTop="10dp"
+            motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp" />
+            motion:layout_constraintTop_toBottomOf="@id/personImageSquare" />
         <Constraint
             android:id="@+id/postRecyclerView"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-            motion:layout_constraintStart_toStartOf="parent" />
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
     </ConstraintSet>
 
     <Transition
-        motion:duration="2000"
+        motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:constraintSetEnd="@+id/end">
+        motion:duration="2000">
         <OnSwipe
             motion:dragDirection="dragUp"
             motion:dragScale="1"
             motion:moveWhenScrollAtTop="true"
             motion:onTouchUp="stop"
-            motion:touchAnchorSide="top"
             motion:touchAnchorId="@id/linearLayout4"
-            />
+            motion:touchAnchorSide="top" />
 
 
+    </Transition>
 
-</Transition>
 
-
-    </MotionScene>
+</MotionScene>
